# portfolio-MelissaB

./: README.md  pyproject.toml
1-hypertuning-gridsearch/: summary.md
2-hypertuning-mlflow/: summary.md
3-hypertuning-rnn/: summary.md
4-hypertuning-ray/: analysis.py  hypertune.py  summary.md
5-deployment/: summary.md
6-hackathon/: project_cuddlefish.md  project_kadaster.md
