[project]
name = "portfolio-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filelock>=3.19.1",
    "hyperopt>=0.2.7",
    "loguru>=0.7.3",
    "mads-datasets[torch]>=0.3.14",
    "matplotlib>=3.10.6",
    "mltrainer>=0.2.5",
    "pandas>=2.3.2",
    "ray[tune]>=2.49.0",
    "seaborn>=0.13.2",
    "tomlserializer>=0.2.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "notebooktester>=0.2.1",
    "ruff>=0.12.11",
]
